--- a/requirements.txt
+++ b/requirements.txt
@@ -14,15 +14,15 @@ cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 coverage==4.5.4
-cryptography==3.2
-Django==2.2.13
+cryptography>=3.3.2
+django>=2.2.18
 django-admin==2.0.0
 django-admin-sso==2.4.0
 django-crispy-forms==1.7.2
 django-excel-response2==2.0.8
 django-oidc==0.1.3
 django-six==1.0.4
-djangorestframework==3.10.3
+djangorestframework>=3.11.2
 docker==4.1.0
 docker-compose==1.25.0
 dockerpty==0.4.1
@@ -34,20 +34,20 @@ Flask==1.1.1
 flask-oidc==1.4.0
 Flask-Testing==0.7.1
 future==0.18.0
-httplib2==0.18.0
+httplib2>=0.19.0
 idna==2.8
 imagesize==1.1.0
 importlib-metadata==0.23
 isodate==0.6.0
 itsdangerous==1.1.0
-Jinja2==2.10.3
+jinja2>=2.11.3
 jsonschema==3.2.0
 lovely-pytest-docker==0.1.0
 Mako==1.1.0
 MarkupSafe==1.1.1
 more-itertools==7.2.0
 oauth2client==4.1.3
-oic==0.13.0
+oic>=1.2.1
 packaging==19.2
 paramiko==2.6.0
 pluggy==0.13.0
@@ -68,11 +68,11 @@ pytest-docker-compose==3.1.2
 python-jose==3.0.1
 python-keycloak==0.17.6
 pytz==2019.3
-PyYAML==4.2b1
+PyYAML>=5.4
 rdflib==4.2.2
 rdflib-jsonld==0.4.0
 requests==2.22.0
-rsa==4.0
+rsa>=4.1
 six==1.12.0
 snowballstemmer==2.0.0
 soupsieve==1.9.5
